# cmf-hft-backtester

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: as_microprice.yaml  as_mid.yaml  as_mid_partial.yaml  liquidation_eda.yaml  monte_carlo.yaml  validation_grid.yaml
data/sample/: lob_sample.parquet
docs/: agent_memory.md  improvement_roadmap.md  model_description.md  research_audit.md  technical_documentation.md
docs/agent_playbooks/: performance_optimization.md  quant_research_workflow.md
docs/decisions/: 0001-agent-ready-project-structure.md  0002-research-source-storage-policy.md  README.md
docs/research/: README.md  liquidation_eda_plan.md  source_registry.yaml
notebooks/: liquidation_eda.ipynb
reports/: performance_report.md
reports/liquidation_eda/: liquidation_eda_report.md  run_metadata.json
reports/tables/: avellaneda_stoikov_microprice_test_metrics.csv  avellaneda_stoikov_mid_test_metrics.csv  calibration_results.csv  data_audit.csv  data_audit_by_date.csv  historical_experiment_by_date.csv  historical_experiment_comparison.csv  k_estimation.csv  k_estimation_summary.csv  microprice_move_sensitivity.csv  microprice_signal_diagnostics.csv  microprice_state_diagnostics.csv  monte_carlo_paths.csv  (+4 more)
scripts/: build_liquidation_eda_notebook.py
tests/: test_backtest_smoke.py  test_execution.py  test_features.py  test_liquidation_features.py  test_liquidation_full_eda.py  test_liquidation_markout.py  test_microprice.py  test_portfolio.py  test_preprocessing.py
(+78 files in other folders)
